--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="username">Username</string>
     <string name="email_address">Email address</string>
     <string name="password_again">Password again</string>
+    <string name="back">Back</string>
 </resources>
