--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,65 @@
     <string name="email_address">Email address</string>
     <string name="password_again">Password again</string>
     <string name="back">Back</string>
+    <!-- Strings for Concert class -->
+    <string name="performer">Performer</string>
+    <string name="location">Location</string>
+    <string name="date">Date</string>
+    <string name="quantity">Quantity</string>
+    <string name="rated_info">Rated Info</string>
+    <string name="purchase_ticket_s">Purchase ticket(s)</string>
+
+    <string name="search">Search</string>
+    <string name="view">View</string>
+    <string name="settings">Settings</string>
+    <string name="logout">Logout</string>
+
+    <string-array name="performers">
+        <item>AWS</item>
+        <item>Azahriah</item>
+        <item>Alma Együttes</item>
+        <item>Unfield</item>
+        <item>BSW</item>
+    </string-array>
+
+    <string-array name="locations">
+        <item>Budapest Park</item>
+        <item>Puskás Aréna</item>
+        <item>Szent Gellért Fórum</item>
+        <item>MVM DomeOled TV</item>
+        <item>IH Rendezvényközpont</item>
+    </string-array>
+
+    <string-array name="dates">
+        <item>May 25, 2024</item>
+        <item>May 26, 2024</item>
+        <item>July 10, 2024</item>
+        <item>July 11, 2024</item>
+        <item>August 30, 2024</item>
+    </string-array>
+
+    <array name="ratings">
+        <item>3.5</item>
+        <item>5</item>
+        <item>4</item>
+        <item>1.5</item>
+        <item>5</item>
+    </array>
+
+    <array name="images">
+        <item>@drawable/aws</item>
+        <item>@drawable/zazaria</item>
+        <item>@drawable/alma</item>
+        <item>@drawable/unfield</item>
+        <item>@drawable/bsw</item>
+    </array>
+
+    <array name="quantities">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </array>
+
 </resources>
